docs: README quickstart requires Arrow's --add-opens JVM flag
Verified the quickstart end-to-end against the real C++ harness: the
verbatim example failed at first query with "Failed to initialize
MemoryUtil" because Arrow needs java.nio internals opened. Document the
two required JVM flags and the applicationDefaultJvmArgs idiom; with
them the ATTACH + multiply(21,2)=42 round-trip passes.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>